# typesum

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: build.yml
docs/: README.md  kinded.md  sumtype_attr.md
macros/: Cargo.toml
macros/src/: kinded.rs  lib.rs  sum_type.rs
src/: lib.rs
tests/: big_sumtype.rs
typesum-macros/: Cargo.toml
typesum-macros/src/: kinded.rs  sum_type.rs
