[package]
name = "typesum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros", optional = true }

[features]
sumtype = ["macros/sumtype"]
kinded = ["macros/kinded"]
default = ["sumtype", "kinded"]

[dev-dependencies]
typesum = { path = ".", features = ["sumtype", "kinded"] }
