[package]
name = "typesum-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Macros for typesum"
repository = "https://github.com/0x00002a/typesum"
authors = ["Natasha England-Elbro <natasha@natashaee.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27" }
convert_case = {version = "0.6.0", optional = true }

[lib]
proc-macro = true

[features]
sumtype = ["syn/extra-traits", "convert_case"]
kinded = []
default = ["kinded", "sumtype"]
